Add amharic translation for app strings

--- a/phison_realestate_mobile/lib/l10n/intl_en.arb
+++ b/phison_realestate_mobile/lib/l10n/intl_en.arb
@@ -5,5 +5,40 @@
   "chooseLanguage": "Choose Language",
   "english": "English",
   "amharic": "Amharic",
-  "logout": "Logout"
+  "logout": "Logout",
+  "createAccount": "Create Account",
+  "signUpFailure": "Sign Up Failure",
+  "createYourAccountByFillingTheFollowingInformation": "Create your account by filling the following information",
+  "continueStep": "Continue",
+  "ourProperties": "Our Properties",
+  "tryAgain": "Try Again",
+  "noPropertiesToShowAtTheMoment": "🙁 No properties to show at the moment",
+  "featuredProperties": "Featured Properties",
+  "loginToYourAccount": "Login To Your Account",
+  "loginByFillingTheFollowingInformation": "Login by filling the following information",
+  "or": "or",
+  "createYourAccount": "Create your account",
+  "home": "Home",
+  "properties": "Properties",
+  "payments": "Payments",
+  "profile": "Profile",
+  "notifications": "Notifications",
+  "paymentDue": "Payment Due",
+  "notification": "Notification",
+  "youHaveANotification": "You have a notification.",
+  "youHaveAnUpcomingPaymentScheduledFor": "You have an upcoming payment scheduled for",
+  "villa": "Villa",
+  "apartment": "Apartment",
+  "pending": "Pending",
+  "completed": "Completed",
+  "location": "Location",
+  "a6digitCodeHasBeenSentToYourSms": "A 6-digit code has been sent to your sms",
+  "verify": "Verify",
+  "letsFindYour": "Let's Find Your",
+  "dreamHome": "Dream Home",
+  "continueAsGuest": "Continue as Guest",
+  "login": "Login",
+  "aLuxuriousResidentialHousesAndApartmentsInAddisAbabaEthiopia": "A luxurious residential houses and apartments in Addis Ababa, Ethiopia.",
+  "phoneNumber": "Phone Number",
+  "goToLogin": "Go to Login"
 }
